# pythonProject-bank

./: .env  .flake8  .gitignore  README.md  check_data.py  check_project.py  cleanup.py  create_sample_data.py  create_views.py  final_check.py  fix_encoding.py  fix_files.py  fix_imports.py  fix_views.py  pyproject.toml  report_spending_by_category_20251226_144411.json  report_spending_by_category_20251226_144424.json  report_spending_by_category_20260103_181856.json  report_spending_by_category_20260103_182429.json  report_spending_by_category_20260103_182828.json  report_spending_by_category_20260103_183219.json  report_spending_by_category_20260105_144442.json  report_spending_by_category_20260105_145752.json  report_spending_by_category_20260105_150530.json  report_spending_by_category_20260105_162250.json  report_spending_by_category_20260106_225040.json  report_spending_by_category_20260108_165940.json  report_spending_by_category_20260108_170007.json  report_spending_by_category_20260108_170108.json  report_spending_by_category_20260108_170422.json  report_spending_by_category_20260108_171121.json  report_spending_by_weekday_20251226_144411.json  report_spending_by_weekday_20251226_144424.json  report_spending_by_weekday_20260103_181856.json  report_spending_by_weekday_20260103_182429.json  report_spending_by_weekday_20260103_182828.json  report_spending_by_weekday_20260103_183219.json  report_spending_by_weekday_20260105_144442.json  report_spending_by_weekday_20260105_145752.json  report_spending_by_weekday_20260105_150530.json  (+31 more)
data/: operations.xlsx
(+10 files in other folders)
